@@ -6,6 +6,9 @@
 	* avatar.c (avt_load_image_xpm):
 	better handling of XPM files with too few columns
 
+	* avatar.c (avt_load_image_xpm):
+	do more error checking in XPM files
+
 2009-06-08  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar.c (load_image_initialize, load_image_done)
